--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta property="og:title" content="Facile da fare a casa">
+<meta property="og:description" content="Accessibile a tutti">
+<meta property="og:image" content="https://ltdfoto.ru/images/2023/02/01/tov5.jpg">
+   
 <script type="text/javascript" src="jquery.js">
 </script>
 <script type="text/javascript" src="jquery-ui.min.js">
